<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_game"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/about_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textColor="@color/White"
        android:text="About"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/about_header"
        android:layout_weight="1"
        android:orientation="horizontal" >
        	
        	<ImageView
        	    android:layout_width="0dp"
        	    android:layout_height="wrap_content"
        	    android:layout_weight="0.25" />
				        

			<ImageView
				android:layout_width="0dp"
				android:layout_height="150dp"
				android:layout_weight="0.5"
				android:scaleType="fitCenter"
				android:src="@drawable/logo_about" />

		    <ImageView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25" />
	</LinearLayout> 
		    
    <TextView
        android:id="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="9dp"
        android:textColor="@color/White"
        android:text="@string/version"
        android:layout_marginTop="170dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>
    
    <TextView
        android:id="@+id/feedback_text"
        android:layout_below="@+id/version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="9dp"
        android:textColor="@color/YellowGame"
        android:text="@string/feedback"
        android:paddingTop="15dp"
        android:layout_centerHorizontal="true"
        />
    
    <TextView 
        android:id="@+id/teilen_text"
        android:layout_below="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="9dp"
        android:textColor="@color/White"
        android:text="@string/teilen"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>
    
 	<LinearLayout
 	    android:id="@+id/anbieter_text"
 	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="240dp" >
        	
 	    	<TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.2"/>
    
		    <TextView 
		        android:id="@+id/anbieter"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:textSize="9dp"
		        android:textColor="@color/White"
		        android:text="@string/anbieter"
		        android:layout_weight="0.8"/>
	 </LinearLayout> 
    
     <LinearLayout
        android:id="@+id/pokermania_text"
        android:layout_below="@+id/anbieter_text"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_weight="1">  
        
        	 <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"/>
    
		    <TextView
		        android:id="@+id/poker_text"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:text="@string/pokermania"
		        android:textSize="9dp"
		        android:textColor="@color/White"
		        android:layout_weight="0.75"/>
	</LinearLayout> 
	
    <LinearLayout
        android:id="@+id/haftungshinweis_text"
        android:layout_below="@+id/pokermania_text"
        android:layout_marginTop="5dp"
 	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1" >
		    
		    <TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.2"/>
    
		    <TextView 
		        android:id="@+id/hinweis_text"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:textSize="9dp"
		        android:textColor="@color/White"
		        android:text="@string/haftungshinweis"
		        android:layout_weight="0.8"/>
		    
		    
	</LinearLayout> 
	
	<LinearLayout
	    android:id="@+id/haftung_text"
        android:layout_below="@+id/haftungshinweis_text"
 	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1" >
		    
    		<TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"/>
		    		    
		    <TextView
		        android:id="@+id/haf_text"
		        android:layout_width="0dp"
		        android:layout_height="50dp"
		        android:text="@string/haftung"
		        android:textSize="9dp"
		        android:textColor="@color/White"
		        android:layout_weight="0.75"/>
	</LinearLayout> 
     
	<LinearLayout
	    android:id="@+id/contact_text"
        android:layout_below="@+id/haftung_text"
        
 	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="9dp"
        android:layout_weight="1" >
        	
 	    	<TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.2"/>
			 <TextView 
			    android:id="@+id/conta_text"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:textSize="9dp"
			    android:textColor="@color/White"
			    android:text="@string/kontaktdaten"
			    android:layout_weight="0.8"/>
	</LinearLayout> 	 
	
	<LinearLayout
        android:layout_below="@+id/contact_text"
 	    android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_weight="1" >
			 
	    	<TextView
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.25"/>
			 
			 <TextView
			     android:id="@+id/last_text"
			     android:layout_width="0dp"
			     android:layout_height="wrap_content"
			     android:text="@string/pokermania"
			     android:textSize="9dp"
			     android:textColor="@color/White"
			     android:layout_weight="0.75"/>
    </LinearLayout> 

    
    	

</RelativeLayout>
