<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_game"
    android:orientation="vertical" >

    
<RelativeLayout
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10dp"
        	android:layout_marginLeft= "20dp"
        	android:layout_marginRight= "10dp"
        	android:orientation="horizontal">
            
            <ImageView
                android:id="@+id/playerImage"
                android:layout_width="70dp"
                android:layout_height="70dp">
                
            </ImageView>
            <RelativeLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                >
                <TextView 
                    android:id="@+id/playerLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView 
                    android:id="@+id/playerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    />
                <TextView 
                    android:id="@+id/playerPremium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"/>
                
            </RelativeLayout>
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
             >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/logo" />
 
    	
    </RelativeLayout>
    
    <ScrollView 
android:id="@+id/ScrollView1"
android:layout_width="fill_parent"
android:layout_height="318dp"
android:layout_marginTop="155dp">
    
    		<LinearLayout
        		android:layout_width="fill_parent"
        		android:layout_height="768dp"
        		android:layout_weight="1"
        		
        		 android:orientation="vertical" >
				
    		    <Button
            		android:id="@+id/account"
            		android:layout_width="300dp"
            		android:layout_height="40dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="10dp"
            		android:text="@string/account"
            		android:textColor="@color/Black"
            		android:textSize="16sp"
            		android:background="@color/White"
            		android:gravity="center_horizontal"
            		
            		android:onClick="account"/>
        		<LinearLayout 
        		    android:orientation="horizontal"
        		    android:layout_width="match_parent"
        		    android:layout_height="match_parent">
        			<Button
            			android:id="@+id/sounds"
            			android:layout_width="180dp"
            			android:layout_height="40dp"
            			android:layout_marginLeft="30dp"
            			android:layout_marginTop="20dp"
            			android:text="@string/sounds"
            			android:textColor="@color/Black"
            			android:textSize="16sp"
            			android:background="@color/White"
            			android:gravity="center_horizontal"
            			/>
        			
        			<Switch
        		    android:id="@+id/switch1"
        		    android:layout_width="wrap_content"
        		    android:layout_height="wrap_content"
        		    android:layout_marginTop="20dp"
        		    android:layout_marginLeft="10dp" />
        		</LinearLayout>

        		

        		<Button
            		android:id="@+id/theme"
            		android:layout_width="300dp"
            		android:layout_height="40dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="20dp"
            		android:text="@string/theme"
            		android:textColor="@color/Black"
            		android:textSize="16sp"
            		android:background="@color/White"
            		android:gravity="center_horizontal"
            		/>
        		
        		<Button
            		android:id="@+id/submitquestion"
            		android:layout_width="300dp"
            		android:layout_height="40dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="20dp"
            		android:text="@string/submitquestion"
            		android:textColor="@color/Black"
            		android:textSize="16sp"
            		android:background="@color/White"
            		android:gravity="center_horizontal"
            		
            		android:onClick="submit"/>

        		<Button
            		android:id="@+id/help"
            		android:layout_width="300dp"
            		android:layout_height="40dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="20dp"
            		android:text="@string/help"
            		android:textColor="@color/Black"
            		android:textSize="16sp"
            		android:background="@color/White" 
            		android:gravity="center_horizontal"
            		/>
	
        		<Button
            		android:id="@+id/premium"
            		android:layout_width="300dp"
            		android:layout_height="40dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="20dp"
            		android:text="@string/premium"
            		android:textColor="@color/Black"
            		android:textSize="16sp"
            		android:background="@color/White"
            		android:gravity="center_horizontal"
            		/>

        		<Button
            		android:id="@+id/about"
            		android:layout_width="300dp"
            		android:layout_height="40dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="20dp"
            		android:text="@string/about"
            		android:textColor="@color/Black"
            		android:textSize="16sp"
            		android:background="@color/White"
            		android:gravity="center_horizontal"
            		/>
        		
        		
    	</LinearLayout>
	</ScrollView>	
	
	
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <ImageView 
            android:layout_width="fill_parent"
            android:layout_height="65dp"
            android:background="@drawable/banner"
            
            
            />
        
        
    </RelativeLayout>
</RelativeLayout>