<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_game"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="168dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/userbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:textColor="@color/White"
            android:textSize="12dip"
            android:onClick="account" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:background="@drawable/logo"
                android:layout_marginLeft="40dip"
                android:layout_marginTop="20dp" />
        </LinearLayout>

    </LinearLayout>
    
    
    
    		<LinearLayout
        		android:layout_width="fill_parent"
        		android:layout_height="700dp"
        		android:layout_weight="1"
        		android:orientation="vertical"
        		android:layout_marginTop="-50dp" >

        		<Button
            		android:id="@+id/randomplayer"
            		android:layout_width="300dp"
            		android:layout_height="43dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="10dp"
            		android:text="@string/random_player"
            		android:textColor="#0099FF"
            		android:textSize="18sp"
            		android:background="@drawable/red_button"
            		android:onClick="randomPlayer"
            		android:gravity="center_horizontal"
            		style="@style/button_text"
            		/>

        		<Button
            		android:id="@+id/searchplayer"
            		android:layout_width="300dp"
            		android:layout_height="43dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="20dp"
            		android:text="@string/search_player"
            		android:textColor="#0099FF"
            		android:textSize="18sp"
            		android:background="@drawable/red_button" 
            		android:gravity="center_horizontal"
            		android:onClick="SearchPlayer"
            		style="@style/button_text"/>
	
        		<Button
            		android:id="@+id/facebookchallenge"
            		android:layout_width="300dp"
            		android:layout_height="43dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="20dp"
            		android:text="@string/facebook_challenge"
            		android:textColor="#0099FF"
            		android:textSize="18sp"
            		android:background="@drawable/red_button"
            		android:gravity="center_horizontal"
            		style="@style/button_text"/>

        		

        		<Button
            		android:id="@+id/emailinvite"
            		android:layout_width="300dp"
            		android:layout_height="43dp"
            		android:layout_marginLeft="30dp"
            		android:layout_marginTop="20dp"
            		android:text="@string/email_invite"
            		android:textColor="#0099FF"
            		android:textSize="18sp"
            		android:background="@drawable/red_button"
            		android:gravity="center_horizontal"
            		style="@style/button_text"/>
    	</LinearLayout>
		
	
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
         >
	<ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="@drawable/banner"
            android:layout_marginTop="50dp"
            android:paddingLeft="10dip"
            android:paddingRight="30dip"
            android:paddingTop="200dp" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="90dp"
	    android:orientation="horizontal"
	    
	     >

				
			<Button
            android:id="@+id/newgame"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="top|center_horizontal"
            android:textColor="@color/White"
            android:textSize="12dip"
            android:layout_marginTop="15dp"
            android:paddingTop="-20dp"
            />
			
			<Button
            android:id="@+id/mygames"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="top|center_horizontal"
            android:textColor="@color/White"
            android:textSize="12dip"
            android:layout_marginTop="15dp"
            android:paddingTop="-20dp"
            android:onClick="myGames"
            />
			
			<Button
            android:id="@+id/stats"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="top|center_horizontal"
            android:textColor="@color/White"
            android:textSize="12dip"
            android:layout_marginTop="15dp"
            android:paddingTop="-20dp"
            android:onClick="stats"
            />
			
			<Button
            android:id="@+id/options"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dip"
            android:gravity="top|center_horizontal"
            android:textColor="@color/White"
            android:textSize="12dip"
            android:layout_marginTop="15dp"
            android:paddingTop="-20dp"
            android:onClick="options"
            />
				
		
    </LinearLayout>
</LinearLayout>